# markitdown-ocr-parallel

./: README.md  pyproject.toml
src/markitdown_ocr/: __about__.py  _docx_converter_with_ocr.py  _ocr_service.py  _pdf_converter_with_ocr.py  _plugin.py  _pptx_converter_with_ocr.py  _xlsx_converter_with_ocr.py
tests/: test_docx_converter.py  test_pdf_converter.py  test_pptx_converter.py  test_xlsx_converter.py
